# pengzu

./: .dockerignore  Cargo.toml  README.md
backend/: .env  .env.example  .gitignore  Cargo.toml  build.rs
backend/data/: README.md  create_tables.sql  remove_duplicated_library.sql
backend/docker/: docker-compose.yml  local-web.nginx
backend/docs/: Insomnia_2022-06-22.json  Insomnia_2022-07-08.json  Insomnia_2022-07-13.json  Insomnia_2022-07-15.json  Insomnia_2022-07-18.json  Insomnia_2022-07-20.json  Insomnia_2022-08-24.json  Insomnia_2022-08-25.json  Insomnia_2022-08-27.json  Insomnia_2022-08-30.json  Insomnia_2022-10-25.json  Insomnia_2022-11-04.json  Insomnia_2022-11-22.json  Insomnia_2023-01-30.json  cover.md
backend/migrations/2022-05-30-073110_books/: up.sql
backend/migrations/2022-05-30-073110_create_books/: up.sql
backend/migrations/2022-05-30-075826_authors/: down.sql  up.sql
backend/migrations/2022-05-30-080246_books_authors_link/: down.sql  up.sql
backend/migrations/2022-05-30-080536_comments/: up.sql
backend/migrations/2022-05-30-081010_data/: down.sql  up.sql
backend/migrations/2022-05-30-081010_files/: up.sql
backend/migrations/2022-05-30-081914_identifiers/: down.sql  up.sql
backend/migrations/2022-05-30-082352_languages/: down.sql  up.sql
backend/migrations/2022-05-30-082840_books_languages_link/: down.sql  up.sql
backend/migrations/2022-05-30-083320_publishers/: down.sql  up.sql
backend/migrations/2022-05-30-083522_books_publishers_link/: down.sql  up.sql
backend/migrations/2022-05-30-083848_ratings/: down.sql  up.sql
backend/migrations/2022-05-30-084211_tags/: up.sql
backend/migrations/2022-05-30-084658_books_tags_link/: down.sql  up.sql
backend/migrations/2022-06-01-000240_file_formats/: down.sql  up.sql
backend/migrations/2022-06-01-001317_identifier_types/: down.sql  up.sql
backend/migrations/2022-06-02-014647_import_libraries/: down.sql  up.sql
backend/migrations/2022-06-02-014647_import_project/: down.sql  up.sql
backend/migrations/2022-06-02-014647_import_projects/: down.sql  up.sql
backend/migrations/2022-06-02-015116_import_books/: down.sql  up.sql
backend/migrations/2022-06-02-015116_import_details/: down.sql  up.sql
backend/migrations/2022-06-09-143135_categories/: down.sql  up.sql
backend/migrations/2022-06-13-054758_books_categories_link/: down.sql  up.sql
backend/migrations/2022-06-20-015226_douban_books/: down.sql  up.sql
backend/migrations/2022-06-20-015233_douban_authors/: down.sql  up.sql
backend/migrations/2022-06-20-015237_douban_publishers/: down.sql  up.sql
backend/migrations/2022-06-20-020838_douban_books_authors_link/: down.sql  up.sql
backend/migrations/2022-06-20-021047_douban_books_recommends_link/: down.sql  up.sql
backend/migrations/2022-06-20-022018_douban_books_detail/: down.sql  up.sql
backend/migrations/2022-06-22-065741_cips/: down.sql  up.sql
backend/migrations/2022-06-22-065822_books_cips_link/: down.sql  up.sql
backend/migrations/2022-06-22-070514_cips_authors_link/: down.sql  up.sql
backend/migrations/2022-07-10-234044_series/: down.sql  up.sql
backend/migrations/2022-07-10-234504_books_series_link/: down.sql  up.sql
backend/migrations/2022-07-15-001314_create_book_index/: down.sql  up.sql
backend/migrations/2022-07-15-002040_books_meta_view/: down.sql  up.sql
backend/migrations/2022-07-18-023226_users/: up.sql
backend/migrations/2022-08-25-001028_user_tags/: down.sql  up.sql
backend/migrations/2022-08-25-001258_books_user_tags_link/: down.sql  up.sql
backend/migrations/2022-08-25-003608_reading_history/: down.sql  up.sql
backend/migrations/2022-11-20-024601_download_history/: down.sql  up.sql
backend/mongodb/: docker-compose.yml
backend/src/: db.rs  error.rs  lib.rs  routers.rs  schema.rs  settings.rs
backend/src/categories/: mod.rs
backend/src/cmd/: add_user.rs  import_library.rs  migrate.rs  mod.rs  run_server.rs
backend/src/import/: books.rs  convert.rs  daemon.rs  db.rs  file_util.rs  import_books.rs  mod.rs  new_task.rs  options.rs  projects.rs  run.rs
backend/src/migrations/: mod.rs  v0_3_2.rs
backend/src/models/: advanced_search.rs  auth.rs  authors.rs  books.rs  books_authors.rs  books_categories.rs  books_languages.rs  books_meta.rs  books_publishers.rs  books_query.rs  books_series.rs  books_tags.rs  books_user_tags.rs  categories.rs  comments.rs  common_page.rs  discover.rs  download_history.rs  file.rs  file_data.rs  file_formats.rs  files.rs  general_query.rs  identifier_types.rs  identifiers.rs  languages.rs  mod.rs  page.rs  publishers.rs  ratings.rs  reading_history.rs  recursive_query.rs  series.rs  simple_search.rs  tags.rs  user_tags.rs  users.rs
backend/src/views/: advanced_search.rs  auth.rs  authors.rs  books.rs  categories.rs  comments.rs  discover.rs  download_history.rs  file.rs  file_formats.rs  files.rs  identifiers.rs  images.rs  languages.rs  mod.rs  publishers.rs  ratings.rs  series.rs  simple_search.rs  tags.rs  user_tags.rs  users.rs
calibre/: .env  Cargo.toml
calibre/migrations/2022-06-02-054236_calibre_tables/: down.sql  up.sql
calibre/migrations/2022-06-06-070255_books_plugin_data/: down.sql  up.sql
calibre/src/: error.rs  lib.rs  schema.rs
calibre/src/models/: authors.rs  books.rs  books_authors.rs  books_hash.rs  books_languages.rs  books_publishers.rs  books_ratings.rs  books_series.rs  books_tags.rs  comments.rs  data.rs  file_formats.rs  (+8 more)
cip/: .clang-format  CMakeLists.txt  Cargo.toml
cip/docs/: install-deps.sh
cip/src/: CMakeLists.txt  error.rs  lib.rs
cip_cpp/src/: CMakeLists.txt
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: app.css  app.rs  error.rs  lib.rs  main.rs  route.rs  router.rs
shared/: Cargo.toml  README.md
shared/src/: advanced_search.rs  authors.rs  books.rs  books_meta.rs  books_query.rs  categories.rs  file_formats.rs  files.rs  general_query.rs  identifier_type.rs  identifiers.rs  images.rs  languages.rs  lib.rs  page.rs  publishers.rs  ratings.rs  recursive_query.rs  series.rs  simple_search.rs  tags.rs  user_tags.rs  users.rs
(+240 files in other folders)
