
[workspace]
members = [
  "backend",
  "calibre",
  "cip",
  "frontend",
  "shared",
]
exclude = [
  "cip_cpp",
  "docker",
  "tools",
  "zlibrary",
]

resolver = "2"

#[profile.dev]
#opt-level = 1
#
#[profile.dev.package."*"]
#opt-level = 1

[profile.release]
codegen-units = 1
# Enable link time optimization
lto = true
opt-level = 3
# Disable panic unwinding, to reduce binary size
panic = "abort"
# Strip debug symbols
strip = "symbols"
