[package]
name = "calibre"
version = "0.1.0"
homepage = "https://github.com/xushaohua/pengzu"
repository = "https://github.com/xushaohua/pengzu"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.26", default-features=false, features = ["serde", "std"] }
diesel = { version = "2.1.0", features = ["chrono", "sqlite", "r2d2"] }
dotenv = "0.15.0"
log = "0.4.19"
r2d2 = "0.8.10"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
