[package]
name = "cip"
version = "0.1.0"
homepage = "https://github.com/xushaohua/pengzu"
repository = "https://github.com/xushaohua/pengzu"
edition = "2021"
publish = false

[dependencies]
clap = "4.1.6"
encoding = "0.2.33"
epub = "2.0.0"
html2text = "0.4.5"
# Support encryption
lopdf = { git="https://github.com/J-F-Liu/lopdf", rev="3a192daba1" }
mobi = "0.8.0"
