[package]
name = "cip"
version = "0.1.0"
homepage = "https://github.com/xushaohua/pengzu"
repository = "https://github.com/xushaohua/pengzu"
edition = "2021"
publish = false
rust-version = "1.61"

[dependencies]
clap = "4.0.32"
encoding_rs = "0.8.34"
epub = "2.1.2"
html2text = "0.10.3"
lopdf = "0.34.0"
mobi = "0.8.0"
