[package]
name = "frontend"
version = "0.6.5"
homepage = "https://github.com/xushaohua/pengzu"
repository = "https://github.com/xushaohua/pengzu"
edition = "2021"
publish = false
rust-version = "1.61"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
gloo-storage = "0.2.2"
gloo-utils = "0.1.7"
log = "0.4.21"
serde = { version = "1.0.198", features = ["serde_derive"] }
serde_json = "1.0.116"
shared = { path = "../shared" }
stylist = { version = "0.13.0", features = ["parser", "yew_integration"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"
serde_urlencoded = "0.7.1"
zu-util = "0.3.4"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Document",
    "Headers",
    "HtmlInputElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ScrollBehavior",
    "ScrollToOptions",
    "Window",
]
