[package]
name = "shared"
version = "0.1.0"
homepage = "https://github.com/xushaohua/pengzu"
repository = "https://github.com/xushaohua/pengzu"
edition = "2021"
publish = false

[features]
default = []

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["serde", "std"] }
diesel = { version = "2.1.0", optional = true, default-features = false, features = ["chrono"] }
serde = { version = "1.0.167", features = ["serde_derive"] }
